production/k8s/04-gov-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: gov-bridge
  namespace: hostshield
spec:
  ports:
    - port: 3000
  selector:
    app: gov-bridge
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gov-bridge
  namespace: hostshield
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gov-bridge
  template:
    metadata:
      labels:
        app: gov-bridge
    spec:
      containers:
        - name: gov-bridge
          image: ghcr.io/slovensko-digital/slovensko-sk-api:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: hostshield-certs
              mountPath: /app/security/api_token_production.public.pem
              subPath: gov_production.public.pem
              readOnly: true
            - name: hostshield-certs
              mountPath: /app/security/sts/production.keystore
              subPath: production.keystore
              readOnly: true
      volumes:
        - name: hostshield-certs
          secret:
            secretName: hostshield-certs
